@@ -4,6 +4,7 @@ Version 5.4.1 (TBD)
     Fixed undo levels not created on browser handled drop or paste events #TINY-6027
     Fixed content in an iframe element parsing as dom elements instead of text content #TINY-5943
     Fixed Oxide checklist styles not showing when printing #TINY-5139
+    Fixed bug with `scope` attribute not being added to the cells of header rows #TINY-6206
 Version 5.4.0 (2020-06-30)
     Added keyboard navigation support to menus and toolbars when the editor is in a ShadowRoot #TINY-6152
     Added the ability for menus to be clicked when the editor is in an open shadow root #TINY-6091
